Handling Multiple Conditions with else if
From The Book chapter 3 section 3.5.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /0-The-Book/guessing_game/target/*
 0-The-Book/guessing_game/.idea/*
+/0-The-Book/control-flow/target/*
+0-The-Book/control-flow/.idea/*
