--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 0-The-Book/guessing_game/.idea/*
 /0-The-Book/control-flow/target/*
 0-The-Book/control-flow/.idea/*
+/0-The-Book/easy-loop-counter/target/*
+0-The-Book/easy-loop-counter/.idea/*
