ownership-and-functions
https://doc.rust-lang.org/book/ch04-01-what-is-ownership.html

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 0-The-Book/control-flow/.idea/*
 /0-The-Book/easy-loop-counter/target/*
 0-The-Book/easy-loop-counter/.idea/*
+/0-The-Book/ownership-and-functions/target/*
+0-The-Book/ownership-and-functions/.idea/*
