--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 0-The-Book/easy-loop-counter/.idea/*
 /0-The-Book/ownership-and-functions/target/*
 0-The-Book/ownership-and-functions/.idea/*
+/0-The-Book/references-and-borrowing/target/*
+0-The-Book/references-and-borrowing/.idea/*
