--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 0-The-Book/ownership-and-functions/.idea/*
 /0-The-Book/references-and-borrowing/target/*
 0-The-Book/references-and-borrowing/.idea/*
+/0-The-Book/slices/target/*
+0-The-Book/slices/.idea/*
