--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 0-The-Book/references-and-borrowing/.idea/*
 /0-The-Book/slices/target/*
 0-The-Book/slices/.idea/*
+/0-The-Book/calculate-area/target/*
+0-The-Book/calculate-area/.idea/*
