--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 0-The-Book/slices/.idea/*
 /0-The-Book/calculate-area/target/*
 0-The-Book/calculate-area/.idea/*
+/0-The-Book/calculate-area-with-tuples/target/*
+0-The-Book/calculate-area-with-tuples/.idea/*
