calculate-area-with-structs

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 0-The-Book/calculate-area/.idea/*
 /0-The-Book/calculate-area-with-tuples/target/*
 0-The-Book/calculate-area-with-tuples/.idea/*
+/0-The-Book/calculate-area-with-structs/target/*
+0-The-Book/calculate-area-with-structs/.idea/*
