--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,29 @@
 /0-The-Book/guessing_game/target/*
-0-The-Book/guessing_game/.idea/*
+/0-The-Book/guessing_game/.idea/*
+
 /0-The-Book/control-flow/target/*
-0-The-Book/control-flow/.idea/*
+/0-The-Book/control-flow/.idea/*
+
 /0-The-Book/easy-loop-counter/target/*
-0-The-Book/easy-loop-counter/.idea/*
+/0-The-Book/easy-loop-counter/.idea/*
+
 /0-The-Book/ownership-and-functions/target/*
-0-The-Book/ownership-and-functions/.idea/*
+/0-The-Book/ownership-and-functions/.idea/*
+
 /0-The-Book/references-and-borrowing/target/*
-0-The-Book/references-and-borrowing/.idea/*
+/0-The-Book/references-and-borrowing/.idea/*
+
 /0-The-Book/slices/target/*
-0-The-Book/slices/.idea/*
+/0-The-Book/slices/.idea/*
+
 /0-The-Book/calculate-area/target/*
-0-The-Book/calculate-area/.idea/*
+/0-The-Book/calculate-area/.idea/*
+
 /0-The-Book/calculate-area-with-tuples/target/*
-0-The-Book/calculate-area-with-tuples/.idea/*
+/0-The-Book/calculate-area-with-tuples/.idea/*
+
 /0-The-Book/calculate-area-with-structs/target/*
-0-The-Book/calculate-area-with-structs/.idea/*
+/0-The-Book/calculate-area-with-structs/.idea/*
+
+/0-The-Book/define-methods/target/*
+/0-The-Book/define-methods/.idea/*
